tests/ui-tests/tests/cases/rename-failures.stderr
error: no field `episode` on the GraphQL type `Film`.  Did you mean `created`?
  --> tests/cases/rename-failures.rs:10:13
   |
10 |     #[cynic(rename = "episode")]
   |             ^^^^^^

error: You can only alias a renamed field.  Try removing `alias` or adding a rename
  --> tests/cases/rename-failures.rs:17:13
   |
17 |     #[cynic(alias)]
   |             ^^^^^
